force-app/main/default/objects/Retail_Inventory__c/Retail_Inventory__c.object-meta.xml
<CustomObject>
    <label>Retail Inventory</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>