force-app/main/default/objects/Retail_Inventory__c/fields/Add_Rack__c.field-meta.xml
<CustomField>
    <fullName>Add_Rack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Rack</label>
    <referenceTo>Retail_Rack__c</referenceTo>
    <relationshipLabel>Retail Inventories</relationshipLabel>
    <relationshipName>Retail_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>