force-app/main/default/objects/Retail_Inventory__c/fields/Add_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Add_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Supplier</label>
    <referenceTo>Retail_Supplier__c</referenceTo>
    <relationshipLabel>Retail Inventories</relationshipLabel>
    <relationshipName>Retail_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>