force-app/main/default/objects/Retail_Inventory__c/fields/Barcode_Image_Testing__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Image_Testing__c</fullName>
    <label>Barcode Image - Testing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>