force-app/main/default/objects/Retail_Inventory__c/fields/Bundle_No__c.field-meta.xml
<CustomField>
    <fullName>Bundle_No__c</fullName>
    <label>Bundle No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>