force-app/main/default/objects/Retail_Inventory__c/fields/Consumable_2_Bundle_No__c.field-meta.xml
<CustomField>
    <fullName>Consumable_2_Bundle_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumable 2 Bundle No.</label>
    <referenceTo>Retail_Consumables__c</referenceTo>
    <relationshipLabel>Retail Inventories (Consumable 2 Bundle No.)</relationshipLabel>
    <relationshipName>Retail_Inventories1</relationshipName>
    <type>Lookup</type>
</CustomField>