force-app/main/default/objects/Retail_Inventory__c/fields/Consumable_2_length_used__c.field-meta.xml
<CustomField>
    <fullName>Consumable_2_length_used__c</fullName>
    <label>Consumable 2 length used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>