force-app/main/default/objects/Retail_Inventory__c/fields/Consumable_Bundle_No__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Bundle_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumable Bundle No.</label>
    <referenceTo>Retail_Consumables__c</referenceTo>
    <relationshipLabel>Retail Inventories</relationshipLabel>
    <relationshipName>Retail_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>