force-app/main/default/objects/Retail_Inventory__c/fields/Consumable_Closing__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Closing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumable Closing</label>
    <type>Checkbox</type>
</CustomField>