force-app/main/default/objects/Retail_Inventory__c/fields/Consumable_Weight_Used_kg__c.field-meta.xml
<CustomField>
    <fullName>Consumable_Weight_Used_kg__c</fullName>
    <label>Consumable Weight Used (kg)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>