force-app/main/default/objects/Retail_Inventory__c/fields/Distributor_MOQ__c.field-meta.xml
<CustomField>
    <fullName>Distributor_MOQ__c</fullName>
    <label>Distributor MOQ</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>