force-app/main/default/objects/Retail_Inventory__c/fields/Image_Testing__c.field-meta.xml
<CustomField>
    <fullName>Image_Testing__c</fullName>
    <label>Image Testing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>