force-app/main/default/objects/Retail_Inventory__c/fields/Instock__c.field-meta.xml
<CustomField>
    <fullName>Instock__c</fullName>
    <label>Instock</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>