force-app/main/default/objects/Retail_Inventory__c/fields/Lot_No__c.field-meta.xml
<CustomField>
    <fullName>Lot_No__c</fullName>
    <label>Lot No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>