force-app/main/default/objects/Retail_Inventory__c/fields/Manufacturer_Type__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Type__c</fullName>
    <label>Manufacturer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-made</fullName>
            </value>
            <value>
                <fullName>3rd Party made</fullName>
            </value>
            <value>
                <fullName>Live production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>