force-app/main/default/objects/Retail_Inventory__c/fields/Notification_Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Notification_Threshold_Value__c</fullName>
    <label>Notification Threshold Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>