force-app/main/default/objects/Retail_Inventory__c/fields/Pending_QC_Stock__c.field-meta.xml
<CustomField>
    <fullName>Pending_QC_Stock__c</fullName>
    <label>Pending QC Stock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>