force-app/main/default/objects/Retail_Inventory__c/fields/Product_Length_Initial__c.field-meta.xml
<CustomField>
    <fullName>Product_Length_Initial__c</fullName>
    <label>Product Length Initial</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>