force-app/main/default/objects/Retail_Inventory__c/fields/Product_Length_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Product_Length_Remaining__c</fullName>
    <label>Product Length Remaining</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>