force-app/main/default/objects/Retail_Inventory__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipLabel>Retail Inventories</relationshipLabel>
    <relationshipName>Retail_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>