force-app/main/default/objects/Retail_Inventory__c/fields/QC_Failed_Stock__c.field-meta.xml
<CustomField>
    <fullName>QC_Failed_Stock__c</fullName>
    <label>QC Failed Stock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>