force-app/main/default/objects/Retail_Inventory__c/fields/QC_Instock__c.field-meta.xml
<CustomField>
    <fullName>QC_Instock__c</fullName>
    <label>QC Instock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>