force-app/main/default/objects/Retail_Inventory__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(SUBSTITUTE(&apos;https://chart.googleapis.com/chart?chs=120x120&amp;cht=qr&amp;chl=&apos;, &apos;&amp;amp;&apos;, &apos;&amp;&apos;)&amp;LEFT($Api.Partner_Server_URL_580, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_580))&amp;&apos;lightning/n/QR_Code_Product_Details?c__recordId=&apos;&amp;Id,&apos;Scan QR code to open record in mobile.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>