force-app/main/default/objects/Retail_Inventory__c/fields/QR_Code_Old__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Old__c</fullName>
    <label>QR Code Old</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>