force-app/main/default/objects/Retail_Inventory__c/fields/Quality_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check_Status__c</fullName>
    <label>Quality Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Quality Check</fullName>
            </value>
            <value>
                <fullName>Quality Approved</fullName>
            </value>
            <value>
                <fullName>Quality Failed</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>