force-app/main/default/objects/Retail_Inventory__c/fields/Retailer_MOQ__c.field-meta.xml
<CustomField>
    <fullName>Retailer_MOQ__c</fullName>
    <label>Retailer MOQ</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>