force-app/main/default/objects/Retail_Inventory__c/fields/Retailer_Price__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Price__c</fullName>
    <label>Retailer Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>