force-app/main/default/objects/Retail_Inventory__c/fields/Saleable_Stock__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Stock__c</fullName>
    <label>Saleable Stock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>