force-app/main/default/objects/Retail_Inventory__c/fields/Sales_Qty__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qty__c</fullName>
    <label>Sales Qty</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>