force-app/main/default/objects/Retail_Inventory__c/fields/Upload_Challan__c.field-meta.xml
<CustomField>
    <fullName>Upload_Challan__c</fullName>
    <label>Upload Challan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>