force-app/main/default/objects/Retail_Inventory__c/fields/Upload_E_Way_Bill__c.field-meta.xml
<CustomField>
    <fullName>Upload_E_Way_Bill__c</fullName>
    <label>Upload E-Way Bill</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>