force-app/main/default/objects/Retail_Inventory__c/fields/Upload_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Upload_Invoice__c</fullName>
    <label>Upload Invoice</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>