force-app/main/default/objects/Retail_Inventory__c/fields/Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse Code</label>
    <referenceTo>Retail_Warehouse__c</referenceTo>
    <relationshipLabel>Retail Inventories</relationshipLabel>
    <relationshipName>Retail_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>