force-app/main/default/objects/Retail_Inventory__c/fields/Wastage_kg__c.field-meta.xml
<CustomField>
    <fullName>Wastage_kg__c</fullName>
    <label>Wastage (kg)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>