force-app/main/default/objects/Retail_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Warehouse_Code__c</columns>
    <columns>Add_Qty__c</columns>
    <columns>Availability__c</columns>
    <columns>Manufacturer_Type__c</columns>
    <columns>Quality_Check_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>